<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/question_will_appear_here"
        android:textSize="20sp" />

    <Button
        android:id="@+id/hackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hack_true" />

    <Button
        android:id="@+id/mythButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myth_false" />

    <TextView
        android:id="@+id/feedbackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/next" />

</LinearLayout>
